# fireant_crawler

./: README.md  docker-compose.yml  pyproject.toml
fireant_crawler/: consume.py  crawler.py  exp.py  kafka_client.py  test.py
