[project]
name = "fireant-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ruff>=0.11.6",
    "selenium>=4.31.0",
    "packaging>=25.0",
    "blinker==1.7.0",
    "selenium-wire>=5.1.0",
    "setuptools>=79.0.0",
]
